--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
   width: 75%;
   margin-top: 4%;
   padding: 15px;
-  background-color:white;
+  background-color:#56B4BE;
   color :#1F2833; 
   /* font-weight: bold; */
   font-style:normal;
@@ -97,8 +97,9 @@
   border-style: ridge;
   border-color: black;
   border-radius: 10px;
-  background-color:white;
+  background-color:#56B4BE;
   padding: 2%;
+  color :#1F2833; 
 }
 
 .projects{
@@ -122,7 +123,7 @@
   border-color: #1F2833;
   border-radius: 40px;
   padding: 20px;
-  background-color: white;
+  background-color:#56B4BE;
   color :#1F2833; 
 }
 .contact{
